crates/php-parser/tests/snapshots/integration__no_hang_namespace_global_braced.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Namespace": {
          "name": null,
          "body": {
            "Braced": [
              {
                "kind": {
                  "InlineHtml": " "
                },
                "span": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "kind": "Nop",
                "span": {
                  "start": 27,
                  "end": 28
                }
              }
            ]
          }
        }
      },
      "span": {
        "start": 6,
        "end": 28
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 28
  }
}
