crates/php-parser/tests/snapshots/integration__no_hang_try_body.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "TryCatch": {
          "body": [
            {
              "kind": {
                "InlineHtml": " "
              },
              "span": {
                "start": 14,
                "end": 15
              }
            },
            {
              "kind": "Nop",
              "span": {
                "start": 21,
                "end": 22
              }
            }
          ],
          "catches": [
            {
              "types": [
                {
                  "parts": [
                    "Exception"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 30,
                    "end": 40
                  }
                }
              ],
              "var": "e",
              "body": [],
              "span": {
                "start": 29,
                "end": 46
              }
            }
          ],
          "finally": null
        }
      },
      "span": {
        "start": 6,
        "end": 46
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 46
  }
}
