crates/php-parser/tests/snapshots/integration__nop_statement.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php ;;;
=== snapshot ===
{
  "stmts": [
    {
      "kind": "Nop",
      "span": {
        "start": 6,
        "end": 7
      }
    },
    {
      "kind": "Nop",
      "span": {
        "start": 7,
        "end": 8
      }
    },
    {
      "kind": "Nop",
      "span": {
        "start": 8,
        "end": 9
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 9
  }
}
