crates/php-parser/tests/snapshots/integration__nowdoc_in_match_arm.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
$r = match(true) {
    default => <<<'NOW'
    literal
    NOW,
};

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "r"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Match": {
                    "subject": {
                      "kind": {
                        "Bool": true
                      },
                      "span": {
                        "start": 17,
                        "end": 21
                      }
                    },
                    "arms": [
                      {
                        "conditions": null,
                        "body": {
                          "kind": {
                            "Nowdoc": {
                              "label": "NOW",
                              "value": "literal"
                            }
                          },
                          "span": {
                            "start": 40,
                            "end": 68
                          }
                        },
                        "span": {
                          "start": 29,
                          "end": 68
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 11,
                  "end": 71
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 71
          }
        }
      },
      "span": {
        "start": 6,
        "end": 73
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 73
  }
}
