crates/php-parser/tests/snapshots/integration__nowdoc_indented_closing_marker.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
$y = <<<'NOW'
    nowdoc content
    NOW;

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "y"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Nowdoc": {
                    "label": "NOW",
                    "value": "nowdoc content"
                  }
                },
                "span": {
                  "start": 11,
                  "end": 46
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 46
          }
        }
      },
      "span": {
        "start": 6,
        "end": 48
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 48
  }
}
