crates/php-parser/tests/snapshots/integration__null_coalesce.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php $x ?? $y ?? 'fallback';
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "NullCoalesce": {
              "left": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "right": {
                "kind": {
                  "NullCoalesce": {
                    "left": {
                      "kind": {
                        "Variable": "y"
                      },
                      "span": {
                        "start": 12,
                        "end": 14
                      }
                    },
                    "right": {
                      "kind": {
                        "String": "fallback"
                      },
                      "span": {
                        "start": 18,
                        "end": 28
                      }
                    }
                  }
                },
                "span": {
                  "start": 12,
                  "end": 28
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 28
          }
        }
      },
      "span": {
        "start": 6,
        "end": 29
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 29
  }
}
